# rust-map-macro

./: Cargo.toml  Dockerfile  docker-compose.yaml
src/: main.rs  mapper.rs
src/mapper_derive/: Cargo.toml
src/mapper_derive/src/: lib.rs
