[package]
name = "mapper_derive"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0.33", features = ["visit"] }
proc-macro2 = "1.0"
anyhow = "1.0"